syntax = "proto3";

message Endorsement {
    uint64 epoch = 1;
    bytes signature = 2;
}

message MessageDataBody {
    uint64 owner_uid = 1;
    repeated uint64 parents = 2;
    uint64 epoch = 3;
    bytes payload = 4;
    repeated Endorsement endorsements = 5;
}

message SignedMessageData {
    bytes body = 1;
    uint64 hash = 2;
    bytes owner_sig = 3;
}

message ConsensusBlockBody {
    repeated bytes messages = 1;
}

message Fetch {
    repeated uint64 hashes = 1;
}

message FetchReply {
    repeated bytes messages = 1;
}

message Gossip {
    uint64 sender_uid = 1;
    uint64 receiver_uid = 2;
    bytes sender_sig = 3;
    oneof body {
        bytes unsolicited = 4;
        bytes unsolicited_reply = 5;
        Fetch fetch = 6;
        FetchReply fetch_reply = 7;
    }
}
